# filecrypt

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
src/: crypto.cpp  crypto.h  file.cpp  file.h  functions.cpp  functions.h  main.cpp  options.cpp  options.h  result.h
tests/: CMakeLists.txt  crypto_test.cpp  functional_test.cpp  options_test.cpp
